[tool.poetry]
name = "ai-bot"
version = "0.1.0"
description = ""
authors = ["hjmr <2620990+hjmr@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "ai_bot"}]

[tool.poetry.dependencies]
python = "^3.11"
line-bot-sdk = "*"
flask = "*"
gunicorn = "*"
openai = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
